# fastapi-reactjs-loginpage

./: README.md
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  schema.py
backend/app/controller/: authentication.py  users.py
backend/app/model/: __init__.py  mixins.py  person.py  role.py  user_role.py  users.py
backend/app/repository/: auth_repo.py  base_repo.py  person.py  role.py  user_role.py  users.py
backend/app/service/: auth_service.py  users.py
backend/migrations/: env.py
backend/migrations/versions/: 61001755488b_add_initial_tables.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  Home.js  index.css  index.js
frontend/src/form/: Forgot.js  Login.js  Register.js
